@@ -9698,6 +9698,14 @@ boost/libs/wave/test/testwave/testfiles/006_051.cpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testfiles/006_052.cpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testfiles/006_053.cpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testfiles/006_054.cpp svneol=native#text/plain
+boost/libs/wave/test/testwave/testfiles/006_055.cpp svneol=native#text/plain
+boost/libs/wave/test/testwave/testfiles/006_056.cpp svneol=native#text/plain
+boost/libs/wave/test/testwave/testfiles/006_057.cpp svneol=native#text/plain
+boost/libs/wave/test/testwave/testfiles/006_058.cpp svneol=native#text/plain
+boost/libs/wave/test/testwave/testfiles/006_059.cpp svneol=native#text/plain
+boost/libs/wave/test/testwave/testfiles/006_060.cpp svneol=native#text/plain
+boost/libs/wave/test/testwave/testfiles/006_061.cpp svneol=native#text/plain
+boost/libs/wave/test/testwave/testfiles/006_062.cpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testfiles/999_001.cpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testfiles/999_002.cpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testfiles/999_003.cpp svneol=native#text/plain
